--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,7 +31,7 @@ target 'Travelio' do
   use_react_native!(
     :path => config[:reactNativePath],
     # Enables Flipper.
-    #
+      :hermes_enabled => false,
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
     :flipper_configuration => flipper_config,
