--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-new-snap-carousel": "^3.9.3",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
