--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.73.1",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-new-snap-carousel": "^3.9.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1"
