--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, '13.4'
 prepare_react_native_project!
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
@@ -32,7 +32,7 @@ target 'Travelio' do
     :path => config[:reactNativePath],
     # Enables Flipper.
       :hermes_enabled => false,
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
+    # Note that if you have use_frameworks! ena bled, Flipper will not work and
     # you should disable the next line.
     :flipper_configuration => flipper_config,
     # An absolute path to your application root.
