--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "add": "^2.0.6",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
-    "react-native-new-snap-carousel": "^3.9.3",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-new-snap-carousel": "^3.9.3",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-video": "^5.2.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
