--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,11 @@ target 'Travelio' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+# React Native Maps dependencies
+
+rn_maps_path = '../node_modules/react-native-maps'
+pod 'react-native-google-maps', :path => rn_maps_path
+
   target 'TravelioTests' do
     inherit! :complete
     # Pods for testing
