--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -20,7 +21,9 @@
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.9.1",
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.8.2",
