--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "aab": "cd android && ./gradlew clean && ./gradlew bundleRelease && cd ..",
+    "apk": "cd android && ./gradlew clean && ./gradlew assembleRelease && cd .."
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
@@ -25,7 +27,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.9.1",
     "react-native-new-snap-carousel": "^3.9.3",
-    "react-native-reanimated": "^2.9.1",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^1.3.1",
