--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'Travelio' do
+target 'SHome' do
   config = use_native_modules!
 
   use_react_native!(
@@ -44,7 +44,7 @@ target 'Travelio' do
 rn_maps_path = '../node_modules/react-native-maps'
 pod 'react-native-google-maps', :path => rn_maps_path
 
-  target 'TravelioTests' do
+  target 'SHomeTests' do
     inherit! :complete
     # Pods for testing
   end
