--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "add": "^2.0.6",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
-    "react-native": "0.73.1",
+    "react-native": "^0.73.2",
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-gesture-handler": "^2.14.0",
