--- a/ios/SHome/Info.plist
+++ b/ios/SHome/Info.plist
@@ -33,8 +33,12 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow access to the camera to take pictures</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Please allow location access to search for locations near you.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow access to the photo library to select pictures</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Medium.ttf</string>
