--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "add": "^2.0.6",
+    "axios": "^1.6.6",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "^0.73.2",
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-date-picker": "^4.3.5",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.9.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
