--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@tanstack/react-query": "^5.17.19",
     "add": "^2.0.6",
     "axios": "^1.6.6",
+    "date-fns": "^3.3.1",
+    "google-libphonenumber": "^3.2.34",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-date-picker": "^4.3.5",
+    "react-native-calendar-picker": "^8.0.0",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-viewing": "^0.2.2",
@@ -35,6 +41,7 @@
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-video": "^5.2.1",
     "yarn": "^1.22.21"
