--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -21,6 +22,7 @@
     "add": "^2.0.6",
     "axios": "^1.6.6",
     "date-fns": "^3.3.1",
+    "geolib": "^3.3.4",
     "google-libphonenumber": "^3.2.34",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
@@ -28,9 +30,10 @@
     "react-native": "^0.73.2",
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
-    "react-native-date-picker": "^4.3.5",
     "react-native-calendar-picker": "^8.0.0",
+    "react-native-date-picker": "^4.3.5",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-viewing": "^0.2.2",
@@ -38,6 +41,7 @@
     "react-native-maps": "^1.9.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-new-snap-carousel": "^3.9.3",
+    "react-native-permissions": "^4.1.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
