--- a/ios/Saveloka.xcodeproj/xcshareddata/xcschemes/Saveloka.xcscheme
+++ b/ios/Saveloka.xcodeproj/xcshareddata/xcschemes/Saveloka.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SHome.app"
-               BlueprintName = "SHome"
-               ReferencedContainer = "container:SHome.xcodeproj">
+               BuildableName = "Saveloka.app"
+               BlueprintName = "Saveloka"
+               ReferencedContainer = "container:Saveloka.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SHomeTests.xctest"
-               BlueprintName = "SHomeTests"
-               ReferencedContainer = "container:SHome.xcodeproj">
+               BuildableName = "SavelokaTests.xctest"
+               BlueprintName = "SavelokaTests"
+               ReferencedContainer = "container:Saveloka.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SHome.app"
-            BlueprintName = "SHome"
-            ReferencedContainer = "container:SHome.xcodeproj">
+            BuildableName = "Saveloka.app"
+            BlueprintName = "Saveloka"
+            ReferencedContainer = "container:Saveloka.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SHome.app"
-            BlueprintName = "SHome"
-            ReferencedContainer = "container:SHome.xcodeproj">
+            BuildableName = "Saveloka.app"
+            BlueprintName = "Saveloka"
+            ReferencedContainer = "container:Saveloka.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
