--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@miblanchard/react-native-slider": "^2.3.1",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/netinfo": "^11.3.0",
     "@react-native-community/slider": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
