--- a/ios/Podfile
+++ b/ios/Podfile
@@ -65,7 +65,7 @@ target 'Saveloka' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => false,
+    # :hermes_enabled => false,
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! ena bled, Flipper will not work and
