--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-keyboard-controller": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.9.1",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-permissions": "^4.1.0",
@@ -52,6 +54,8 @@
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.8.1",
+    "react-native-youtube-iframe": "^2.3.0",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
