--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-calendar-picker": "^8.0.0",
+    "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.5",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-flash-message": "^0.4.2",
