--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/netinfo": "^11.3.0",
     "@react-native-community/slider": "^4.5.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
