--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.5",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.14.0",
@@ -51,13 +52,14 @@
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-permissions": "^4.1.0",
     "react-native-reanimated": "^3.6.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-select-dropdown": "^3.4.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^13.8.1",
-    "react-native-youtube-iframe": "^2.3.0",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
