--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "date-fns": "^3.3.1",
     "geolib": "^3.3.4",
     "google-libphonenumber": "^3.2.34",
-    "lottie-react-native": "^6.5.1",
+    "lottie-ios": "^4.4.1",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
