--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-section-alphabet-list": "^3.0.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^1.3.1",
