--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-controller": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
