--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-new-snap-carousel": "^3.9.3",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-permissions": "^4.1.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-restart": "^0.0.27",
