--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.18.1",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "add": "^2.0.6",
     "axios": "^1.6.6",
     "date-fns": "^3.3.1",
@@ -51,7 +52,6 @@
     "react-native-maps": "^1.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-new-snap-carousel": "^3.9.3",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-permissions": "^4.1.0",
     "react-native-reanimated": "^3.6.1",
@@ -61,7 +61,7 @@
     "react-native-section-alphabet-list": "^3.0.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
-    "react-native-snap-carousel": "^1.3.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^13.8.1",
     "yarn": "^1.22.21"
