--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "add": "^2.0.6",
     "axios": "^1.6.6",
     "date-fns": "^3.3.1",
+    "date-holidays": "^3.23.10",
     "geolib": "^3.3.4",
     "google-libphonenumber": "^3.2.34",
     "lottie-ios": "^4.4.1",
@@ -37,6 +38,8 @@
     "react-native-awesome-slider": "^2.4.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-calendar-picker": "^8.0.0",
+    "react-native-calendario": "^3.5.1",
+    "react-native-calendars": "^1.1304.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.5",
     "react-native-encrypted-storage": "^4.0.3",
