--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-select-dropdown": "^3.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^13.8.1",
     "yarn": "^1.22.21"
