--- a/ios/Saveloka/Info.plist
+++ b/ios/Saveloka/Info.plist
@@ -49,7 +49,7 @@
 		<string>Montserrat-Bold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
