--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-clipboard/clipboard": "^1.14.0",
     "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/netinfo": "^11.3.0",
     "@react-native-community/slider": "^4.5.0",
     "@react-native-picker/picker": "^2.6.1",
