--- a/ios/Saveloka/Info.plist
+++ b/ios/Saveloka/Info.plist
@@ -42,6 +42,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow access to the photo library to select pictures</string>
 	<key>UIAppFonts</key>
+
 	<array>
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
@@ -62,7 +63,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+		<key>UISupportedInterfaceOrientations</key>
+<array>
+    <string>UIInterfaceOrientationPortrait</string>
+</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	
 	<false/>
+	
 </dict>
 </plist>
