--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-permissions": "^4.1.0",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
