--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "date-holidays": "^3.23.10",
     "geolib": "^3.3.4",
     "google-libphonenumber": "^3.2.34",
-    "lottie-ios": "^4.4.1",
-    "lottie-react-native": "^6.7.0",
+    "lottie-ios": "4.4.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
@@ -43,6 +43,7 @@
     "react-native-calendar-picker": "^8.0.0",
     "react-native-calendars": "^1.1304.1",
     "react-native-collapsible": "^1.6.1",
+    "react-native-copilot": "^3.3.2",
     "react-native-date-picker": "^4.3.5",
     "react-native-document-picker": "^9.3.0",
     "react-native-encrypted-storage": "^4.0.3",
