--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
     "react-native-bouncy-checkbox": "^3.0.7",
-    "react-native-calendar-picker": "^8.0.0",
+    "react-native-calendar-picker": "^6.1.5",
     "react-native-calendars": "^1.1304.1",
+    "react-native-camera": "^4.2.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-copilot": "^3.3.2",
     "react-native-date-picker": "^4.3.5",
@@ -61,6 +62,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-permissions": "^4.1.0",
+    "react-native-qr-decode-image-camera": "^1.1.3",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-restart": "^0.0.27",
