--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-maps": "^1.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-pager-view": "^6.3.3",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-permissions": "^4.1.5",
     "react-native-qr-decode-image-camera": "^1.1.3",
@@ -74,6 +75,7 @@
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-tab-view": "^3.5.2",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^13.8.1",
     "react-native-youtube-iframe": "^2.3.0",
