"update chat and airdrop"

--- a/ios/Saveloka/Info.plist
+++ b/ios/Saveloka/Info.plist
@@ -33,6 +33,10 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>telprompt</string>
+    </array>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow access to the camera to take pictures</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
@@ -48,6 +52,7 @@
 		<string>Montserrat-SemiBold.ttf</string>
 		<string>Montserrat-Bold.ttf</string>
 	</array>
+	
 	<key>UILaunchStoryboardName</key>
 	<string></string>
 	<key>UIRequiredDeviceCapabilities</key>
