--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-calendars": "^1.1304.1",
     "react-native-camera": "^4.2.1",
     "react-native-collapsible": "^1.6.1",
+    "react-native-communications": "^2.2.1",
     "react-native-copilot": "^3.3.2",
     "react-native-date-picker": "^4.3.5",
     "react-native-document-picker": "^9.3.0",
@@ -53,6 +54,7 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-viewing": "^0.2.2",
@@ -80,7 +82,9 @@
     "react-native-webview": "^13.8.1",
     "react-native-youtube-iframe": "^2.3.0",
     "rn-tourguide": "^3.3.0",
-    "yarn": "^1.22.21"
+    "socket.io-client": "^4.7.5",
+    "yarn": "^1.22.21",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
